# F1_predict

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
api/: app.py
configs/: base.yaml
configs/model/: lgbm_ranker.yaml
models/ranker_track_32/: feature_cols.txt  meta.json  ranker.pt  scaler.json
models/ranker_track_v1/: feature_cols.txt  meta.json  ranker.pt  scaler.json
models/ranker_track_v2/: meta.json  ranker.pt  scaler.json
models/ranker_v1/: feature_cols.txt  meta.json  ranker.pt  scaler.json
reports/: audit_report.csv
scripts/: audit_features.py  build_features.py  debug_leakage.py  evaluate.py  export_last_two_years.py  ingest.py  inspect_features.py  make_features.py  predict.py  predict_race.py  refresh_fastf1_pipeline.py  simulate_season.py  train.py  train_ranker.py
src/: __init__.py  feature_audit.py  frame_utils.py  scenario_builder.py  scenario_support.py
src/f1rank/: __init__.py
src/features/: __init__.py  dev_trend_pre.py  driver_team_priors_pre.py  driver_track_cluster_pre.py  event_chaos_priors_pre.py  history_form.py  pit_ops_pre.py  pit_ops_risk_pre.py  practice_compound_pre.py  practice_longrun_pre.py  practice_readiness_pre.py  quali_evolution_pre.py  quali_execution_pre.py  quali_priors_pre.py  reliability_risk_pre.py  results_target.py  sprint_weekend_pre.py  strategy_priors_pre.py  telemetry_efficiency_pre.py  telemetry_history_pre.py  track_onehot.py  track_profile.py  traffic_overtake_pre.py  tyre_priors_pre.py  utils.py  (+4 more)
tests/: test_smoke.py
tools/: audit_features.py
ui/: streamlit_app.py
(+28 files in other folders)
